ajout id et body à 100%

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,761 +1,6 @@
-#jumbotron {
-  background-color: transparent;
-  color: black;
-}
-
-
-
-#row{
-  width: 100%;
-}
-
-#home-img:hover{
-  filter: drop-shadow(1px 1px 20px white);
-}
-
-#presentation-img{
-  border-radius: 50%;
-}
-
-#add-ill-img{
-  max-width: 400px;
-}
-
-
-#presentation-img:hover{
-  filter: drop-shadow(10px 10px 40px white);
-}
-
-h2{
-  text-align: justify;
-}
-
-#presentation-title{
-  color:#18a4e1;
-}
-
-.presentation-title{
-  color: #18a4e1;
-  font-weight: bolder;
-}
-
-.Offre-title {
-  color: #18a4e1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#container {
-  background-color: #ffffff;
-  text-align: justify;
-}
-
-#home-container{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: scroll;
-}
-
-
-#catalogue-container{
-  background: #ffffff;
-  background-size: auto;
-  background-position: top;
-  color: black;
-  font-size: large;
-}
-
-
-#catalogue-row{
-  padding-top: 20px;
-}
-
-#presentation-row{
-  backdrop-filter: brightness(95%);
-  padding-top: 50px;
-  opacity: 0;
-  transform: translateY(100px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-}
-
-#home-row{
-  height: 100%;
-  width: 100%;
-  padding-top: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  z-index: 2;
-  overflow: scroll;
-  opacity: 0;
-  transform: translateY(100px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-}
-
-#home-row.show, #presentation-row.show, #section-offre.show, #message-content.show, #card.show, #login.show{
-  opacity: 1;
-  transform: initial;
-}
-
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 1;
-  overflow: scroll;
-}
-
-#presentation-container{
-  background: #fafaff;
-  background-size: auto;
-  background-position: top;
-  color: black;
-  font-size: large;
-}
-
-
-#message-content{
-  padding: 30px;
-  box-sizing: border-box;
-  display: block;
-  flex-direction: column;
-  display: flex;
-  gap: 5px;
-  padding: 25px;
-  border: 1px solid black;
-  color: white;
-  border-radius: 20px;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.75);
-  overflow: hidden;
-  background: transparent;
-  backdrop-filter: brightness(50%);
-  opacity: 0;
-  transform: translateY(100px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-}
-
-
-#message-content h1{
-  margin-bottom: 10px;
-}
-
-
-#container-form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 98vh;
-  backdrop-filter: brightness(95%);
-}
-
-
-#message-container{
-  background-size: auto;
-  background-position: center;
-  width: 100%;
-}
-
-#message-row{
-  backdrop-filter: brightness(90%);
-  padding-top: 50px;
-}
-
-.tbl-container{
-  margin-top: 75px;
-  background-size: cover;
-  background-position: center;
-}
-
-.tbl{
-  border: 1px solid black;
-  color: white;
-  border-radius: 20px;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.75);
-  overflow:scroll;
-  backdrop-filter: brightness(30%);
-  width: 90%;
-  height: 90%;
-  height: 700px;
-  margin-bottom: 5px;
-}
-
-
-#login {
-  border: 1px solid black;
-  width: 400px;
-  height: 500px;
-  color: white;
-  border-radius: 20px;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.75);
-  overflow: hidden;
-  backdrop-filter: brightness(20%);
-  opacity: 0;
-  transform: translateY(-100px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-}
-
-#login .formulaire input{
-  width: auto;
-}
-
-.form-space {
-  text-align: justify;
-  border: 1px solid black;
-  color: white;
-  border-radius: 20px;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.75);
-  backdrop-filter: brightness(20%);
-  width: 90%;
-  max-height: 100%;
-  overflow: scroll;
-  max-width: 768px;
-  height: 700px;
-  margin-bottom: 5px;
-}
-
-.formulaire {
-  padding: 0px 30px 30px 30px;
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  flex-direction: column;
-  display: flex;
-  gap: 5px;
-}
-
-
-@media (min-width: 769px){
-  #first-illustration{
-    max-height: 150px;
-    max-width: 100%;
-  }
-}
-
-@media (min-width: 1200px){
-  #first-illustration{
-    max-height: 250px;
-    max-width: 100%;
-  }
-}
-
-
-
-label {
-  color: rgba(255, 255, 255, 0.8);
-  text-transform: uppercase;
-  font-size: 12px;
-  letter-spacing: 2px;
-}
-
-.label-login {
-  padding-left: 10px;
-}
-
-
-
-input {
-  background-color: rgb(212, 232, 247);
-  height: 40px;
-  width: 100%;
-  line-height: 40px;
-  border-radius: 20px;
-  padding: 0px 20px;
-  border: none;
-  margin-bottom: 20px;
-  color: black;
-}
-
-
-select {
-  background-color: rgb(212, 232, 247);
-  height: 40px;
-  width: 100%;
-  border-radius: 20px;
-  padding: 0px 20px;
-  border: none;
-  color: black
-}
-
-#home-button{
-  margin-bottom: 5px;
-}
-
-button {
-  background: rgb(45, 126, 231);
-  height: 40px;
-  line-height: 40px;
-  border-radius: 40px;
-  border: none;
-  margin: 10px 0px;
-  color: white;
-  font-size: 12px;
-  text-transform: uppercase;
-}
-
-button a:hover {
-  color: white;
-  text-decoration: none;
-}
-
-button a {
-  color: white;
-}
-
-#button-avis{
-  color:black;
-  background-color:#18a4e1;
-  border-color:#18a4e1;
-  font-weight:500;
-}
-
-textarea {
-  display: block;
-  margin:auto;
-  background-color: rgb(212, 232, 247);
-  border-radius: 20px;
-  width: 100%;
-  padding: 1%;
-}
-
-.table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.table th,
-.table td {
-  padding: 10px;
-  border: 1px solid #dee2e6;
-  text-align: left;
-}
-
-.table th {
-  background-color: #676f82;
-}
-
-.table-striped tbody tr:nth-of-type(odd) {
-  background-color: #f9f9f9;
-}
-
-#card{
-  background: transparent;
-  /*border-radius: 5%;*/
-  border-width: 2px;
-  /*border-color: #676f82;*/
-  border-color: transparent;
-  overflow: hidden;
-  text-align: justify;
-  max-width: 100%;
-  margin-bottom: 40px;
-  opacity: 0;
-  transform: translateY(100px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-}
-
-#home-card{
-  background: transparent;
-  border: none;
-  text-align: justify;
-  color: black;
-  max-width: 100%;
-}
-
-#column-offre a:hover{
-  text-decoration: none;
-}
-
-
-#column-offre{
-  padding-top: 20px;
-  border-radius: 5%;
-}
-
-
-#footer {
-  background-color: #090e19;
-  color: white;
-}
-
-#section-offre {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 400px;
-  border-radius: 5%;
-  background: white;
-  border: 1px solid #676f82;
-  backdrop-filter: brightness(70%);
-  opacity: 0;
-  transform: translateY(100px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-}
-
-#section-offre:hover{
-  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
-}
-
-#section-offre:hover #home-card{
-  color:rgb(20, 100, 210);
-}
-
-#section-presentation{
-  height: 685px;
-  border-radius: 2%;
-  background: white;
-  backdrop-filter: brightness(90%);
-  margin-top: 10%;
-  overflow: scroll;
-  color: black;
-  border: 1px solid black;
-}
-
-
-a{
-  color:white;
-}
-
-a:hover{
-  color: rgb(20, 100, 210);
-}
-
-.offre-page{
-  padding: 2%;
-  margin-top: 75px;
-}
-
-.carousel-item {
-  height: 100vh;
-}
-.carousel-item img {
-  height: 100%;
-  object-fit: cover;
-}
-
-#footer-col{
-  margin-top: 5%;
-}
-
-.brand{
-  display: none;
-  color:white;
-}
-
-@media (max-width: 767px) {
-  #footer-col{
-    margin-top: 10%;
-    padding-left: 10%;
-  }
-  .brand{
-    display: block;
-    color:white;
-  }
-}
-
-
-
-/******************************************************************************************************************/
-
-/*barre de navigation*/
-#nav1 {
-  position: fixed;
-  top: 0;
-  overflow: visible;
-  z-index: 5;
-  width: 100%;
-  background-color: #090e19;
-  color: white;
-}
-
-#nav2 {
-  position: fixed;
-  top: 0;
-  overflow: visible;
-  z-index: 5;
-  width: 100%;
-  background-color: #090e19;
-  color: white;
-}
-
-.hamburger-link{
-  color: black;
-}
-
-#current-link{
-  color: rgb(20, 100, 210) ;
-}
-
-.hamburger-link:hover, #current-link:hover{
-  color: white;
-}
-
-
-#nav-link{
-  color:white;
-}
-
-#nav-link:hover{
-  color:rgb(20, 100, 210);
-}
-
-@media (min-width: 769px){
-  #nav2{
-    display: none;
-  }
-  .dropdown-content #top:hover {
-    border-radius: 0px 13px 0px 0px;
-  }
-}
-
-
-/******************************************************************************************************************/
-
-/*bouton login*/
-.Btn {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  width: 30px;
-  height: 30px;
-  border: none;
-  border-radius: 50%;
-  cursor: pointer;
+html,
+body {
   position: relative;
-  overflow: hidden;
-  transition-duration: .3s;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
-  background-color:#18a4e1;
-}
-
-/* plus sign */
-.sign {
   width: 100%;
-  transition-duration: .3s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.sign svg {
-  width: 17px;
-}
-
-.sign svg path {
-  fill: white;
-}
-
-/* text */
-.text {
-  position: absolute;
-  right: 0%;
-  width: 0%;
-  opacity: 0;
-  color: white;
-  font-size: 1em;
-  font-weight: 600;
-  transition-duration: .3s;
-}
-
-/* hover effect on button width */
-.Btn:hover {
-  width: 125px;
-  border-radius: 40px;
-  transition-duration: .3s;
-}
-
-.Btn:hover .sign {
-  width: 30%;
-  transition-duration: .3s;
-  padding-left: 20px;
-}
-
-/* hover effect button's text */
-.Btn:hover .text {
-  opacity: 1;
-  width: 70%;
-  transition-duration: .3s;
-  padding-right: 10px;
-}
-
-/* button click effect*/
-.Btn:active {
-  transform: translate(2px, 2px);
-}
-
-/******************************************************************************************************************/
-/*bouton menu*/
-
-.paste-button {
-  position: relative;
-  display: block;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.button {
-  background-color:#18a4e1;
-  color:white;
-  padding: 10px 15px;
-  font-size: 15px;
-  height: 40px;
-  font-weight: bolder;
-  border: 1px solid transparent;
-  border-radius: 15px;
-  cursor: pointer;
-  transition: border-radius 0.2s ease-out;
-}
-
-.dropdown-content {
-  display: block;
-  font-size: 13px;
-  position: absolute;
-  z-index: 6;
-  overflow: hidden;
-  background-color: white;
-  border: 2px solid #57c0f0;
-  border-radius: 15px 0px 15px 15px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  opacity: 0;
-  max-height: 0;
-  transition: max-height 0.8s ease-out, border-radius 0.3s;
-}
-
-#drop-nav2{
-  margin-left: -200%;
-  min-width: 130px;
-}
-
-#drop-menu{
-  border-radius: 0px 15px 15px 15px;
-  width: 110%;
-}
-
-
-.dropdown-content.show{
-  max-height: 500px; /* Adjust as needed */
-  opacity: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 8px 4px;
-  text-decoration: none;
-  display: block;
-  transition: 0.1s;
-}
-
-.dropdown-content a:hover {
-  background-color: #2c5d74;
-  color: white;
-}
-
-.dropdown-content a form button:hover {
-  background-color: #2c5d74;
-  color: white;
-}
-
-.dropdown-content a:focus {
-  background-color: #212121;
-  color: #57c0f0;
-}
-
-
-
-.dropdown-content #bottom:hover {
-  border-radius: 0px 0px 13px 13px;
-}
-
-
-@media (max-width: 768px){
-  #nav1{
-    display: none;
-  }
-  .dropdown-content #top:hover {
-    border-radius: 13px 0px 0px 0px;
-  }
-}
-
-
-
-
-
-/************************************************************************************************************************/
-/*bouton delete and edit*/
-
-.mod-button {
-  position: relative;
-  border: none;
-  margin-left: 25px;
-}
-
-#delete-button{
-  background-color: rgb(248, 87, 87);
-}
-
-#edit-button{
-  background-color: rgb(244, 244, 104);
-}
-
-
-.mod-button::after {
-  position: absolute;
-  top: -130%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: fit-content;
-  height: fit-content;
-  padding: 4px 8px;
-  border-radius: 5px;
-  transition: .2s linear;
-  transition-delay: .2s;
-  color: black;
-  text-transform: uppercase;
-  font-size: 12px;
-  opacity: 0;
-  visibility: hidden;
-}
-
-#delete-button::after{
-  content: 'Supprimer';
-  background-color: rgb(248, 51, 51);
-}
-
-#edit-button::after{
-  content: 'Editer';
-  background-color: rgb(248, 248, 71);
-}
-.icon {
-  transform: scale(1.2);
-  transition: .2s linear;
-}
-
-.mod-button:hover>.icon {
-  transform: scale(1.5);
-}
-
-.mod-button:hover>.icon path {
-  fill: rgb(168, 7, 7);
-}
-
-.mod-button:hover::after {
-  visibility: visible;
-  opacity: 1;
-  top: -100%;
-}
-
-#edit {
-  width: 35px;
-  height: 38px;
-  align-self: center;
+  height: 100%;
 }
