--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
 /* Ajouter des images et styles pour les nouveaux parallèles */
 .parallelism img {
   width: 100%;
-  height: 300px; /* Vous pouvez ajuster cette valeur en fonction de vos besoins */
+  height: 18rem; /* Vous pouvez ajuster cette valeur en fonction de vos besoins */
   object-fit: cover; /* Cela permet de garder les proportions des images tout en les ajustant à la taille spécifiée */
+  object-fit: fill;
   margin-bottom: 15px;
   border-radius: 8px;
 }
@@ -15,7 +16,7 @@
 }
 
 header {
-  background-image: url('images/Capture_d_écran_2024-12-05_23-32-33.png');
+  background-image: url("images/logo");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
