--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,10 @@
-/* Ajouter des images et styles pour les nouveaux parallèles */
-.parallelism img {
+html,
+body {
+  position: relative;
   width: 100%;
-  height: 18rem; /* Vous pouvez ajuster cette valeur en fonction de vos besoins */
-  object-fit: cover; /* Cela permet de garder les proportions des images tout en les ajustant à la taille spécifiée */
-  object-fit: fill;
-  margin-bottom: 15px;
-  border-radius: 8px;
+  height: 100%;
 }
 
-/* Les autres styles restent inchangés */
-.parallelism h3 {
-  font-size: 1.5em;
-  color: #006994;
-  margin-bottom: 15px;
-}
 
 header {
   background-image: url("images/logo");
@@ -24,45 +15,21 @@ header {
   color: #fff;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
   text-align: center;
-  padding: 20px 0;
   height: auto; /* Ajuste automatiquement la hauteur */
-  min-height: 300px; /* Hauteur minimale pour garantir une présentation soignée */
+  padding: 2rem;
 }
 
-header h1 {
-  font-size: 2.5em;
-  margin: 0;
+
+
+.image img{
+  width: 100%;
+  height: 18rem;
+  object-fit: fill;
+  margin-bottom: 10px;
+  border-radius: 50%;
 }
 
-.parallelism p {
-  text-align: justify;
-  margin: 10px 0;
-}
-
-/* Uniformiser la mise en page pour les blocs */
-.parallelism .row {
-  display: flex;
-  gap: 20px;
-  flex-wrap: wrap;
-}
-
-.parallelism .col-md-6 {
-  flex: 1;
-  min-width: 300px;
-  text-align: center;
-}
-
-@media (max-width: 768px) {
-  .parallelism .row {
-    flex-direction: column;
-  }
-}
-
-section {
-  margin: 20px auto;
-  max-width: 1200px;
-  background-color: #fff;
-  border-radius: 8px;
-  padding: 20px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+#footer-logo{
+  height: 5rem;
+  width: auto;
 }
