--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@ body {
   height: 100%;
 }
 
-
 header {
   background-image: url("images/logo");
   background-size: contain;
@@ -19,9 +18,7 @@ header {
   padding: 2rem;
 }
 
-
-
-.image img{
+.image img {
   width: 100%;
   height: 18rem;
   object-fit: fill;
@@ -29,7 +26,20 @@ header {
   border-radius: 50%;
 }
 
-#footer-logo{
+#footer-logo {
   height: 5rem;
   width: auto;
+}
+
+p {
+  margin: 0 0 0 1rem;
+}
+
+main {
+  margin: 0 0 0 1rem;
+}
+
+#ocean-pollution,
+#whale-migration {
+  display: none;
 }
