--- a/css/styles.css
+++ b/css/styles.css
@@ -3,32 +3,7 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-}
-
-header {
-  background-image: url("images/logo");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: #b5bfbd;
-  color: #fff;
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-  text-align: center;
-  height: auto; /* Ajuste automatiquement la hauteur */
-  padding: 2rem;
-}
-
-.image img {
-  width: 100%;
-  height: 18rem;
-  object-fit: fill;
-  margin-bottom: 10px;
-  border-radius: 50%;
-}
-
-#footer-logo {
-  height: 5rem;
-  width: auto;
+  font-weight: bold;
 }
 
 p {
@@ -42,4 +17,67 @@ main {
 #ocean-pollution,
 #whale-migration {
   display: none;
+}
+
+header {
+  background-image: url("images/logo");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: #fff;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  text-align: center;
+  height: auto; /* Ajuste automatiquement la hauteur */
+  padding: 2rem;
+}
+
+.image,.img{
+  font-weight: normal;
+}
+
+.image img{
+  width: 100%;
+  height: 18rem;
+  object-fit: fill;
+  margin-bottom: 10px;
+  border-radius: 50%;
+}
+
+.image img:hover{
+  filter: drop-shadow(10px 10px 40px white);
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
+}
+
+.img img{
+  width: 100%;
+  height: 18rem;
+  object-fit: fill;
+  margin-bottom: 10px;
+  border-radius: 50%;
+  filter: drop-shadow(10px 10px 40px white);
+}
+
+.img{
+  opacity: 0;
+  transform: translateY(100px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.img.show{
+  opacity: 1;
+  transform: initial;
+}
+
+#footer-logo{
+  height: 5rem;
+  width: auto;
+}
+
+.container-fluid{
+  background: url("../images/tapis-de-bain-bulle-d-eau-bleu.jpg.jpg");
+  background-size: cover;
+  min-height: 100%;
+  color: white;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  font-weight: bold;
 }
